# exaSpim-UI

./: config-backup.toml  config.toml  exaspim_main.py  exaspim_userinterface.py  pyproject.toml  requirements.txt
widgets/: instrument_parameters.py  lasers.py  livestream.py  tissue_map.py  volumeteric_acquisition.py  widget_base.py
