[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exaspim_main"
authors = [{name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"}]
version = "0.0.1"
dynamic = ["description"]
description-file='README.md'
dependencies = [
    'pyserial'
]
